Use FileIOUtil to change file content